--- a/templates/posts/new.html.twig
+++ b/templates/posts/new.html.twig
@@ -4,8 +4,7 @@
     {{ form_start(form) }}
     {{ form_row(form.title) }}
     {{ form_row(form.body, { 'attr': {
-        'rows' : '10',
-        'cols' : '10' }}) }}
+        'rows' : '20', 'cols' : '140' }}) }}
     <button class="btn btn-default" type="submit">Сохранить</button>
     {{ form_end(form) }}
 {% endblock %}
