--- a/templates/posts/show.html.twig
+++ b/templates/posts/show.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <h2>{{ post.title }}</h2>
     <p>{{ post.body }}</p>
+    <hr>
+    <a href="{{ path('blog_post_edit', {'slug': post.slug}) }}">Редактировать</a> |
+    <a href="{{ path('blog_post_delete', {'slug': post.slug}) }}">Удалить</a>
 {% endblock %}
