--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+            {#<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">#}
+            {#{{ encore_entry_link_tags('css/app') }}#}
+        <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
+        {% endblock %}
     </head>
+
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            {#{{ encore_entry_script_tags('js/app') }}#}
+        <script src="{{ asset('build/js/app.js') }}"></script>
+        {% endblock %}
     </body>
+
 </html>
