--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,16 +4,19 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-            {#<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">#}
-            {#{{ encore_entry_link_tags('css/app') }}#}
         <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
         {% endblock %}
     </head>
 
     <body>
+    <br>
+    <form class="form-inline my-2 my-lg-0" action="{{ path('blog_search') }}" method="get">
+        <input class="form-control mr-sm-2" type="search" aria-label="Search" name="q">
+        <button class="btn btn-default my-2 my-sm-0" type="submit">Ищем</button>
+    </form>
+    <hr>
         {% block body %}{% endblock %}
         {% block javascripts %}
-            {#{{ encore_entry_script_tags('js/app') }}#}
         <script src="{{ asset('build/js/app.js') }}"></script>
         {% endblock %}
     </body>
