--- a/templates/posts/show.html.twig
+++ b/templates/posts/show.html.twig
@@ -5,5 +5,6 @@
     <p>{{ post.body }}</p>
     <hr>
     <a href="{{ path('blog_post_edit', {'slug': post.slug}) }}">Редактировать</a> |
-    <a href="{{ path('blog_post_delete', {'slug': post.slug}) }}">Удалить</a>
+    <a href="{{ path('blog_post_delete', {'slug': post.slug}) }}">Удалить</a> |
+    <a href="{{ path('blog_posts') }}">На главную</a>
 {% endblock %}
