--- a/templates/posts/index.html.twig
+++ b/templates/posts/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %}{% endblock %}
+{% block title %}Добро пожаловать!{% endblock %}
 
 {% block body %}
     {% for post in posts %}
